--- a/codefresh.yml
+++ b/codefresh.yml
@@ -3,7 +3,7 @@ steps:
 
   build_image:
     type: build
-    description: Building the image...
+    description: Building the image
     working_directory: ${{main_clone}}
     image_name: ${{CF_REPO_OWNER}}/${{CF_REPO_NAME}}
     tag: '${{CF_BRANCH}}'
